--- a/controls/update_def.cf.in
+++ b/controls/update_def.cf.in
@@ -156,6 +156,11 @@ bundle common update_def
         if => and( "mpf_update_control_agent_default_repository",
                    not( isvariable( "control_agent_default_repository" ) ) );
 
+      "control_agent_default_directory_create_mode" -> { "CFE-4590" }
+        string => ifelse( isvariable("control_agent_default_directory_create_mode"),
+                          "$(control_agent_default_directory_create_mode)",
+                          "700");
+
     enable_cfengine_enterprise_hub_ha::
       "standby_servers" slist => filter("$(sys.policy_hub)", "ha_def.ips", false, true, 10);
       "policy_servers" slist => { "$(sys.policy_hub)", "@(standby_servers)" };
