Fixed incorrect variable name for evaluation_order in update policy

--- a/update.cf.in
+++ b/update.cf.in
@@ -192,7 +192,7 @@ body agent control
 
 @if minimum_version(3.27.0)
       # The order in which promises are evaluated (top_down|classic)
-        evaluation_order => "$(default:def.control_agent_update_evaluation_order)";
+        evaluation_order => "$(default:update_def.control_agent_update_evaluation_order)";
 
       # The permissions automatically created directories should have
         default_directory_create_mode => "$(default:update_def.control_agent_default_directory_create_mode)";
